--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -7,7 +7,7 @@
         <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="{{ product.name }}">
+                <img src="{{ product.product_image.url }}" class="img-fluid rounded-start" alt="{{ product.name }}">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -24,13 +24,13 @@
                   {% else %}
                     <p class="card-text"><small class="text-body-secondary">${{ product.price }}</small></p>
                   {% endif %}
-                  <button class="btn btn-dark mt-auto">Add to Cart</button>
+                  <button class="btn btn-dark mt-auto mb-5">Add to Cart</button>
                 </div>
               </div>
             </div>
           </div>
+          <a href="{% url 'all_products' %}"><button class="btn btn-dark mt-5 mb-5">Back to Shop</button></a>
     </center>
 </div>
 
-<br/><br/><br/><br/><br/><br/>
 {% endblock %}
