--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -39,9 +39,6 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{% url 'all_products' %}">All Products</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="{% url 'category' 'newest-guitars' %}">Newest Guitars</a></li>
-              <li><a class="dropdown-item" href="{% url 'category' 'sale-guitars' %}">Sale Guitars</a></li>
-              <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="{% url 'category' 'S-Type' %}">S-Type Guitars</a></li>
               <li><a class="dropdown-item" href="{% url 'category' 'T-Type' %}">T-Type Guitars</a></li>
               <li><a class="dropdown-item" href="{% url 'category' 'LP-Type' %}">LP-Type Guitars</a></li>
@@ -54,11 +51,11 @@
           </li>
         </ul>
         <form class="d-flex">
-          <button class="btn btn-outline-dark" type="submit">
-            <i class="bi-cart-fill me-1"></i>
-            Cart
-            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-          </button>
+          <a href="{% url 'cart' %}" class="btn btn-outline-dark">
+              <i class="bi-cart-fill me-1"></i>
+              Cart
+              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+          </a>
         </form>
       </div>
     </div>
