--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -54,7 +54,7 @@
           <a href="{% url 'cart' %}" class="btn btn-outline-dark">
               <i class="bi-cart-fill me-1"></i>
               Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+              <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart_count">{{ cart|length }}</span>
           </a>
         </form>
       </div>
