--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -3,18 +3,18 @@
 
 {% block content %}
   <body>
-    <header>
-      <div class="text-center text-white">
-        <h1 class="lead fw-normal text-black mb-0 mt-3">
-          Handbuilt Guitars and Basses. Made With Passion in Upstate NY, USA.
-        </h1>
-      </div>
-      <img src="{% static '../media/uploads/banner/banner.png' %}" alt="Lambda Guitars Banner" class="img-fluid">
-      <div class="container px-4 px-lg-5 my-5">
-        <center>
-           <a href="{% url 'all_products' %}"><button class="btn btn-dark btn-lg">Shop Now</button></a>
-        </center>
-      </div>
-    </header>
+      <header>
+        <div class="text-center text-white">
+          <h1 class="lead fw-normal text-black mb-0 mt-3">
+            Handbuilt Guitars and Basses. Made With Passion in Upstate NY, USA.
+          </h1>
+        </div>
+        <div class="container px-4 px-lg-5 my-5">
+          <center>
+            <img src="{% static '../media/uploads/banner/banner.png' %}" alt="Lambda Guitars Banner" class="img-fluid mb-5" style="display: flex; margin: 0 auto;">
+            <a href="{% url 'all_products' %}"><button class="btn btn-dark btn-lg">Shop Now</button></a>
+          </center>
+        </div>
+      </header>
   </body>
 {% endblock %}
