Moved footer out of template to make it fit each page better

--- a/store/templates/all_products.html
+++ b/store/templates/all_products.html
@@ -78,6 +78,13 @@
         </div>
       </div>
     </section>
+    <footer class="py-5 bg-dark w-100">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          Copyright &copy; Lambda Guitars 2023
+        </p>
+      </div>
+    </footer>
   </body>
 {% endblock %}
 
