--- a/store/templates/about.html
+++ b/store/templates/about.html
@@ -56,5 +56,11 @@
     </center>
   </div>
 </div>
-
+<footer class="py-5 bg-dark w-100" style="position: absolute; bottom: 0;">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Lambda Guitars 2023
+    </p>
+  </div>
+</footer>
 {% endblock %}
