--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -16,5 +16,12 @@
           </center>
         </div>
       </header>
+      <footer class="py-5 bg-dark w-100" style="position: absolute; bottom: 0;">
+        <div class="container">
+          <p class="m-0 text-center text-white">
+            Copyright &copy; Lambda Guitars 2023
+          </p>
+        </div>
+      </footer>
   </body>
 {% endblock %}
