--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -35,5 +35,12 @@
 <br/><br/>
 <br/><br/>
 <br/><br/>
+<footer class="py-5 bg-dark w-100" style="position: absolute; bottom: 0;">
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        Copyright &copy; Lambda Guitars 2023
+      </p>
+    </div>
+</footer>
 
 {% endblock %}
