--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -33,6 +33,14 @@
     </center>
 </div>
 
+<footer class="py-5 bg-dark w-100" style="position: absolute; bottom: 0;">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Lambda Guitars 2023
+    </p>
+  </div>
+</footer>
+
 <script>
   // Check if the button is pressed
   $(document).on('click', '#add-cart', function(e){
